# constexpr_queue

./: .gitignore  CMakeLists.txt  README.md
include/: constexpr_queue.hpp
include/MaCe/: constexpr_queue.hpp
tests/: CMakeLists.txt  consteval_compilation_test.cpp  functionality_tests.cpp  simple_test.cpp  types_tests.cpp
